--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -215,7 +215,7 @@
             <div class="gallery-item">
               <a href="{% url 'post-detail' post.pk %}" class="gallery-link">
                 {% if post.image %}
-                  <img src="{{ request.scheme }}://{{ request.get_host }}{{ post.image.url }}" alt="{{ post.title }}" class="gallery-image">
+                  <img src="{{ post.image.url }}" alt="{{ post.title }}" class="gallery-image">
                 {% else %}
                   <div class="gallery-image" style="display:flex;align-items:center;justify-content:center;background:#f3f4f6;color:#9ca3af;font-size:2rem;">
                     {% if post.item_type == 'lost' %}🔴{% else %}🟢{% endif %}
