--- a/blog/templates/blog/profile.html
+++ b/blog/templates/blog/profile.html
@@ -7,7 +7,7 @@
     <p>Email: {{ user.email }}</p>
   </div>
   <div class="media">
-    <img src="{{ user.profile.image.url}}" class="mr-3" alt="Profile Picture" style="width:150px;height:150px;">
+    <img src="{{ post.user.profile.image.url}}" class="mr-3" alt="Profile Picture" style="width:150px;height:150px;">
     <div class="media-body">
       <h5 class="mt-0">{{ user.get_full_name|default:user.username }}</h5>
       <p>{{ user.profile.bio }}</p>
